#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- new shell command =my-size-all= for summarising sizes of
  files and directories in current directory

*** Emacs

- =my-background-update-now= command for manually triggering a
  check of the background theme based on daylight time

- =my-emacs-cask= projectile project type

- =my-org-created-property-name= variable for specifying the
  name of the property used to track when Org items were
  created

- next actions, projects, and waiting-fors are now identified
  via the =my-org-gtd-type-property-name= property rather than
  by tags

- prompt for org next action energies

- =undo-tree= is now an explicit dependency in Cask

** Changed

- agenda view =D= now displays completed and cancelled
  actions, waiting fors, someday items, and maybe items

- =evil-undo-system= now uses ='undo-tree=

- next actions and waiting fors created with
  =my-org-gtd-insert-next-action-heading= and
  =my-org-gtd-insert-waiting-for-heading= now include a
  creation date

- org gtd files now under =current= directory

- org mobile inbox is now =mobile-inbox.org= (under =current=
  directory)

- =my-org-gtd-insert-waiting-for-heading= will now only
  schedule if date is in future

- =xref--xref-buffer-mode= now defaults to =motion= state

** Fixed

*** Emacs

- =my-projectile-grep= no longer fails when grepping in a
  non-project directory (searches in current directory
  instead)

- =RET= in =xref--xref-buffer-mode= now jumps to the
  definition

- various fixes needed to get configuration working with Emacs
  27

* 0.11.0 - 2020-05-06

** Added

- =grepcount= command for searching files and organising
  result on number of matches

- =greptxt= and =greptext= aliases for searching =.txt= files
  and organising results on number of matches

- =cman= alias for =connmanctl=

- new files
  - =.bash_profile=
  - =okularpartrc=

- =office-monitor-show= and =office-monitor-hide= commands for